[metadata]
name = maze.py
version = attr: maze.VERSION
url = https://github.com/pipeseroni/maze.py
project_urls =
    Issue Tracker = https://github.com/pipeseroni/maze.py/issues
classifiers =
    Environment :: Console :: Curses
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Topic :: Games/Entertainment
license = BSD 3-Clause License
description = Simple curses pipes written in Python
long_description = file: README.rst
keywords =
    maze
    pipes
    screensaver


[options]
scripts = maze.py
python_requires = >= 3.0


[bdist_wheel]
universal = 1
